@@ -586,7 +586,7 @@ public class JSONObject implements JSONElement,Map {
         try {
             Object o = opt(key);
             return o instanceof Number ? ((Number) o).doubleValue() :
-                    new Double((String) o).doubleValue();
+                    Double.valueOf((String) o);
         } catch (Exception e) {
             return defaultValue;
         }
@@ -737,7 +737,7 @@ public class JSONObject implements JSONElement,Map {
      * @throws JSONException If the key is null or if the number is invalid.
      */
     public JSONObject put(String key, double value) throws JSONException {
-        put(key, new Double(value));
+        put(key, Double.valueOf(value));
         return this;
     }
 
@@ -751,7 +751,7 @@ public class JSONObject implements JSONElement,Map {
      * @throws JSONException If the key is null.
      */
     public JSONObject put(String key, int value) throws JSONException {
-        put(key, new Integer(value));
+        put(key, Integer.valueOf(value));
         return this;
     }
 
@@ -765,7 +765,7 @@ public class JSONObject implements JSONElement,Map {
      * @throws JSONException If the key is null.
      */
     public JSONObject put(String key, long value) throws JSONException {
-        put(key, new Long(value));
+        put(key, Long.valueOf(value));
         return this;
     }
 
